--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "live",
     "component"
   ],
+  "files": [
+    "lib",
+    "src"
+  ],
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -20,7 +24,6 @@
     "url": "https://github.com/FormidableLabs/component-playground/issues"
   },
   "scripts": {
-    "postinstall": "npm run build-lib",
     "preversion": "npm run check",
     "version": "npm run clean && npm run build && git add -A dist",
     "clean-dist": "rimraf dist",
@@ -56,7 +59,10 @@
     "check-cov": "npm run lint && npm run test-cov",
     "check-dev": "npm run lint && npm run test-dev"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "react": "0.14.x"
+  },
+  "devDependencies": {
     "babel": "^5.5.8",
     "babel-core": "^5.5.8",
     "babel-loader": "^5.3.2",
@@ -64,12 +70,7 @@
     "rimraf": "^2.4.0",
     "style-loader": "~0.8.0",
     "url-loader": "~0.5.5",
-    "webpack": "^1.10.0"
-  },
-  "peerDependencies": {
-    "react": "0.14.x"
-  },
-  "devDependencies": {
+    "webpack": "^1.10.0",
     "babel-eslint": "^3.1.25",
     "chai": "^3.2.0",
     "codemirror": "^5.6.0",
